# fuel-plugin-dns-updater

./: .gitreview  README.md  deployment_tasks.yaml  environment_config.yaml  metadata.yaml
deployment_scripts/puppet/manifests/: controller.pp  mysql.pp  neutron.pp  nova.pp  pacemaker.pp  service.pp
deployment_scripts/puppet/modules/dns_update/files/: PKG-INFO  README.md  db_setup.py  dnsupdater-failover  openstack-dns-updater  openstack-dns-updater.conf  requirements.txt  setup.cfg  setup.py
deployment_scripts/puppet/modules/dns_update/files/etc/: dns-updater.conf
deployment_scripts/puppet/modules/dns_update/files/ocf/: DnsUpdater
deployment_scripts/puppet/modules/dns_update/files/os_dns_updater/: dns-db-cleaner.py  openstack-dns-updater.py
deployment_scripts/puppet/modules/dns_update/files/os_dns_updater/utils/: cfg.py  db_lib.py  dns_lib.py
deployment_scripts/puppet/modules/dns_update/manifests/: controller.pp  init.pp  mysql.pp  neutron.pp  nova.pp  pacemaker.pp  service.pp
