[metadata]
name = os_dns_updater
description = service to register virtual machines in dns
summary = listen to nova RabbitMQ events and update dns records
author = Sberbank Technology

[files]
packages = os_dns_updater

[global]
setup-hooks = pbr.hooks.setup_hook

[pbr]
warnerrors = True
